--- a/Simulations and Plots/LANL/LANL simulations.ipynb
+++ b/Simulations and Plots/LANL/LANL simulations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "d3a80dde-6182-4f20-a00b-6d27dd435b11",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
     "from scipy.interpolate import interp1d\n",
     "\n",
     "# import h5py\n",
-    "from skimage.transform import radon\n",
+    "# from skimage.transform import radon\n",
     "from sklearn.metrics import r2_score\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.patches import Rectangle\n",
@@ -37,51 +37,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "65a9eb89-ad67-4f88-8675-97de02d67b82",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run \"/Users/macprorac2/Documents/Gabriel Dima's Group/NPGMI-Library/NPGMI Update.ipynb\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 502,
-   "id": "fe49640b-3754-465f-9475-194707854077",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# measured = pd.read_excel(\"NG6_Spectrum_FinalCorrections.xlsx\").to_numpy().T\n",
-    "# measured[0]*=1e-9\n",
-    "# calculated = pd.read_excel(\"ng6_MCNP_spectrum.xlsx\").to_numpy().T\n",
-    "# calculated[0]*=1e-9\n",
-    "# k_maxwell40 = maxwell_k(40,1.675e-27,len(measured[0]))\n",
-    "# k_maxwell5A = maxwell_k(19.52,1.675e-27,len(measured[0]))\n",
-    "\n",
-    "# norm = 1.05457e-34/1.675e-27 # h-bar over neutron mass \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "c866b990-0725-4399-9f1f-6c7c7f1dc24f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def maxwell_k(Tc,mass, N_points):\n",
-    "    a = np.sqrt(1.38e-23*Tc/(mass))\n",
-    "    v_dist = maxwell(scale = a)\n",
-    "    q_mass = 1.05457e-34/mass\n",
-    "    k_vals = np.linspace(v_dist.ppf(0.1),v_dist.ppf(0.999),N_points) / q_mass\n",
-    "    return np.asarray([k_vals, np.sqrt(2/pi)*q_mass*q_mass/(a*a*a)*k_vals*k_vals*np.exp(-k_vals*k_vals*q_mass*q_mass/(2*a*a))])\n",
-    "\n",
-    "def maxk_raw(k,Tc):\n",
-    "    a = np.sqrt(1.38e-23*Tc/(1.675e-27))\n",
-    "    q_mass = 1.05457e-34/1.675e-27\n",
-    "    return np.sqrt(2/pi)*q_mass*q_mass/(a*a*a)*k*k*np.exp(-k*k*q_mass*q_mass/(2*a*a))\n",
-    "    "
+    "%run \"C:\\Users\\gabri\\Documents\\NPGMI-Library\\NPGMI Engine.ipynb\""
    ]
   },
   {
@@ -1611,6 +1572,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "c866b990-0725-4399-9f1f-6c7c7f1dc24f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def maxwell_k(Tc,mass, N_points):\n",
+    "    a = np.sqrt(1.38e-23*Tc/(mass))\n",
+    "    v_dist = maxwell(scale = a)\n",
+    "    q_mass = 1.05457e-34/mass\n",
+    "    k_vals = np.linspace(v_dist.ppf(0.1),v_dist.ppf(0.999),N_points) / q_mass\n",
+    "    return np.asarray([k_vals, np.sqrt(2/pi)*q_mass*q_mass/(a*a*a)*k_vals*k_vals*np.exp(-k_vals*k_vals*q_mass*q_mass/(2*a*a))])\n",
+    "\n",
+    "def maxk_raw(k,Tc):\n",
+    "    a = np.sqrt(1.38e-23*Tc/(1.675e-27))\n",
+    "    q_mass = 1.05457e-34/1.675e-27\n",
+    "    return np.sqrt(2/pi)*q_mass*q_mass/(a*a*a)*k*k*np.exp(-k*k*q_mass*q_mass/(2*a*a))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 502,
+   "id": "fe49640b-3754-465f-9475-194707854077",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# measured = pd.read_excel(\"NG6_Spectrum_FinalCorrections.xlsx\").to_numpy().T\n",
+    "# measured[0]*=1e-9\n",
+    "# calculated = pd.read_excel(\"ng6_MCNP_spectrum.xlsx\").to_numpy().T\n",
+    "# calculated[0]*=1e-9\n",
+    "# k_maxwell40 = maxwell_k(40,1.675e-27,len(measured[0]))\n",
+    "# k_maxwell5A = maxwell_k(19.52,1.675e-27,len(measured[0]))\n",
+    "\n",
+    "# norm = 1.05457e-34/1.675e-27 # h-bar over neutron mass \n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
    "id": "390e2c9f-ecec-47e9-8ee2-3697b7763720",
    "metadata": {},
@@ -1671,7 +1671,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
