--- a/NPGMI Engine.ipynb
+++ b/NPGMI Engine.ipynb
@@ -30,16 +30,35 @@
    },
    "outputs": [],
    "source": [
-    "def assert_ndarr(a):\n",
-    "    if type(a) == np.ndarray and a.ndim > 0:\n",
-    "        return a\n",
-    "    elif type(a) == list:\n",
-    "        return np.squeeze(a)\n",
-    "    elif a is None:\n",
+    "def assert_ndarr(container):\n",
+    "\"\"\"\n",
+    "    Ensures that the input is cast to a numpy array.\n",
+    "\n",
+    "    Args:\n",
+    "        container: an array-like object containing some values.\n",
+    "    Returns:\n",
+    "        The contents of container cast to a numpy array.\n",
+    "    \n",
+    "\"\"\"\n",
+    "    \n",
+    "    if type(container) == np.ndarray and container.ndim > 0:\n",
+    "        return arr\n",
+    "    elif type(container) == list:\n",
+    "        return np.squeeze(container)\n",
+    "    elif container is None:\n",
     "        raise TypeError(\"Input is None\")\n",
-    "    return np.array([a])\n",
+    "    return np.array([container])\n",
     "\n",
     "def get_chi_sq(data, modelled, uncert):\n",
+    "\"\"\"\n",
+    "    Ensures that the input is cast to a numpy array.\n",
+    "\n",
+    "    Args:\n",
+    "        container: an array-like object containing some values.\n",
+    "    Returns:\n",
+    "        The contents of container cast to a numpy array.\n",
+    "    \n",
+    "\"\"\"\n",
     "    return np.sum((data - modelled)**2 / (uncert**2))\n",
     "\n",
     "def print_shapes(*arrs):\n",
