fixed typo in NPGMI Engine.ipynb

--- a/NPGMI Engine.ipynb
+++ b/NPGMI Engine.ipynb
@@ -42,7 +42,7 @@
     "\"\"\"\n",
     "    \n",
     "    if type(container) == np.ndarray and container.ndim > 0:\n",
-    "        return arr\n",
+    "        return container\n",
     "    elif type(container) == list:\n",
     "        return np.squeeze(container)\n",
     "    elif container is None:\n",
